# ps-flask

./: .gitignore  AUTHORS  README.rst  manage.py  pylintrc  requirements.txt  setup.cfg  tox.ini
flasky/: __init__.py  flasky.py  forms.py  models.py  views.py
flasky/static/css/: main.css
flasky/templates/: 403.html  500.html  add.html  base.html  bookmark_form.html  bookmark_list.html  form_macros.html  index.html  login.html  signup.html  user.html
tests/: test_flasky.py
