[metadata]
name = flasky
summary = Pluralsight Flask Coursework
description-file = 
    README.rst
author = Matt Allen
author_email = gigyas@gmail.com
homepage = http://github.com/gigyas/flasky
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    flasky

[tool:pytest]
norecursedirs = .tox .git .local *.egg build